Aplicacion de una cuadricula

--- a/U5/basic-android-kotlin-compose-training-courses-main/app/src/main/res/values/strings.xml
+++ b/U5/basic-android-kotlin-compose-training-courses-main/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="painting">Painting</string>
     <string name="photography">Photography</string>
     <string name="tech">Tech</string>
+    <string name="app_name">Courses</string>
+    <string name="courses">Courses</string>
 </resources>
